# pdns-sysrepo

./: meson.build
.circleci/: config.yml
src/: load-data-in-operational.cc  pdns-sysrepo.cc  sr_apply_changes_bug.cc
src/configurator/: config.cc  config.hh  configurator.cc  configurator.hh  subscribe.cc  subscribe.hh
src/configurator/subscribe/: helpers.cc  pdns-config.cc  zones.cc
src/pdns-config/: pdns-config.cc
src/remote-backend/: find-zone.cc  getUnfreshSlaveInfos.cc  sysrepo-helpers.cc  zone-helpers.cc
subprojects/pdns-api-cpp/: meson.build
test/: meson.build
test/create-config/: create-config.cc
test/remote-backend/: config-initial.in.json  config-initial.json  meson.build  pdns-sysrepo.yaml.in  supervisord.conf.in  test-initial-config.py
test/yang-typedefs/: yang-typedefs.cc
yang/: dns-common-typedef-test.yang  dns-common.yang  dns-server-common.yang  pdns-server.yang  sr-apply-changes.yang  sr_apply_changes.yang
